<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuActivity">
    <TextView
            android:text="@string/menu_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:layout_width="199dp"
            android:layout_height="41dp"
            android:text="@string/menu_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.16"
            android:textSize="30sp" android:textAlignment="center"
            android:id="@+id/textView3" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/menu_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/menu_button_create"
            android:layout_width="230dp"
            android:layout_height="65dp" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
            android:onClick="GoToNew" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/menu_button_list"
            android:layout_width="230dp"
            android:layout_height="65dp" android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginTop="16dp"
            android:onClick="GoToMesList" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/menu_button_impexp"
            android:layout_width="230dp"
            android:layout_height="65dp" android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/button2"
            android:layout_marginTop="16dp"
            android:onClick="GoToImpExp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
    />
    <Button
            android:text="@string/menu_button_settings"
            android:layout_width="230dp"
            android:layout_height="65dp" android:id="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" android:layout_marginTop="16dp"
            android:onClick="GoToSettings" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>