<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewActivity">
    <Button
            android:text="@string/new_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            android:onClick="GoToCreateNew" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/new_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            android:onClick="GoToCreateFromExisted" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/new_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:textSize="14sp" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" android:textAlignment="center"/>
    <TextView
            android:text="@string/new_text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp" app:layout_constraintHorizontal_bias="0.492"
            android:textAlignment="center" app:layout_constraintTop_toBottomOf="@+id/button5"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/new_text2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>