<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

        <TextView
                android:text="@string/expimp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/impexp_textview"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/expimp_exportbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/impexp_button_export"
                app:layout_constraintTop_toBottomOf="@+id/impexp_textview"
                android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="onExportClick" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/expimp_importbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/impexp_button_import"
                app:layout_constraintTop_toBottomOf="@+id/impexp_exportbuttoninfo"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:onClick="onImportClick"/>
        <TextView
                android:text="@string/expimp_exportinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/impexp_exportbuttoninfo"
                app:layout_constraintTop_toBottomOf="@+id/impexp_button_export"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/expimp_importinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/impexp_importbuttoninfo"
                app:layout_constraintTop_toBottomOf="@+id/impexp_button_import"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


